--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ psycopg2-binary = "^2.9.9"
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.1"
 pytest-asyncio = "^0.23.8"
+pytest-aiohttp = "^1.0.5"
 
 [build-system]
 requires = ["poetry-core"]
